--- a/ios-developer.html
+++ b/ios-developer.html
@@ -100,7 +100,7 @@
 Vision / Computational geometry. GIT version control (good knowledge). English
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/unbabel/8b9b0d1c-283d-4e4c-a68c-fb0b808708f6'>Unbabel - iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/unbabel/8b9b0d1c-283d-4e4c-a68c-fb0b808708f6'>Unbabel - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -109,7 +109,7 @@ Vision / Computational geometry. GIT version control (good knowledge). English
 <p>1 day ago ... We are looking for talented mid-level to senior iOS developers. What we offer. 
 Tired of spending your valuable time dealing with clients directly, estimating,?...</p>
 <hr/>
-<h5><a href='https://semios.workable.com/j/0DEDF410CE'>Semios - Jobs: Embedded Software Developer Co-op - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semios.workable.com/j/0DEDF410CE'>Semios - Jobs: Embedded Software Developer Co-op - Apply online</a></h5> 
 <p><span class="badge badge-light">Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -129,12 +129,12 @@ Tired of spending your valuable time dealing with clients directly, estimating,?
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://careers-grubhub.icims.com/jobs/8470/ios-developer/job'>iOS Developer in Boston, Massachusetts ... - Careers at Grubhub</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-grubhub.icims.com/jobs/8470/ios-developer/job'>iOS Developer in Boston, Massachusetts ... - Careers at Grubhub</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... 1 Federal St 6th Floor, Boston, MA 02110 is now hiring a iOS Developer in 
 Boston, Massachusetts. Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gunio/ab045fae-ca5e-4215-b701-57598ef7bc74'>Gun.io - iOS ARkit Expert / Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/ab045fae-ca5e-4215-b701-57598ef7bc74'>Gun.io - iOS ARkit Expert / Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -148,7 +148,7 @@ Boston, Massachusetts. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://cobibike.recruitee.com/o/ios-developer-fmx-frankfurt-am-main'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cobibike.recruitee.com/o/ios-developer-fmx-frankfurt-am-main'>
       iOS Developer (f/m/x) - COBI.Bike GmbH
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -172,7 +172,7 @@ label.</p>
 <p><span class="badge badge-light"></span></p>
 <p>1 ???? ????? ... Apply online for the job of iOS Developer at Wheely.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/auth0/8878c2f6-0928-4cad-8032-718caef43c10'>Auth0 - iOS Developer Experience Engineer, SDKs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/auth0/8878c2f6-0928-4cad-8032-718caef43c10'>Auth0 - iOS Developer Experience Engineer, SDKs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -204,7 +204,7 @@ label.</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/65686e1e-c536-48d2-a212-e4cf20b23cca'>vpTech - iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/65686e1e-c536-48d2-a212-e4cf20b23cca'>vpTech - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -332,7 +332,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<h5><a href='https://nodes.recruitee.com/o/ios-developer-multiple-locations'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nodes.recruitee.com/o/ios-developer-multiple-locations'>
       iOS Developer - Multiple Locations - Nodes
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -417,7 +417,7 @@ Things?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aequilibrium.applytojob.com/apply/TL9jjpVakd/Senior-IOS-Developer'>Senior iOS Developer - Aequilibrium Software Inc. - Career Page</a></h5> 
+<h5><a href='https://aequilibrium.applytojob.com/apply/TL9jjpVakd/Senior-IOS-Developer'>Senior iOS Developer - Aequilibrium Software Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 27, 2019 ... Apply to Senior iOS Developer at Aequilibrium Software Inc. in Vancouver, BC, 
 Canada.</p>
@@ -430,7 +430,7 @@ Canada.</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/8x8/074814c2-8639-41cb-b52f-534fcf251337'>8x8 - Senior iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/8x8/074814c2-8639-41cb-b52f-534fcf251337'>8x8 - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
@@ -446,11 +446,11 @@ Canada.</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-03</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999690035804-senior-ios-developer'>TrophyRoom Pte Ltd Senior IOS Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TrophyRoomPteLtd/743999690035804-senior-ios-developer'>TrophyRoom Pte Ltd Senior IOS Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ho Chi Minh Ho Chi Minh</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://macropace-technologies.workable.com/j/E70852650F'>Macropace Technologies - Jobs: IOS Developer(C2H), 5 to 9 Years, Bangalore - Apply online</a></h5> 
+<h5><a href='https://macropace-technologies.workable.com/j/E70852650F'>Macropace Technologies - Jobs: IOS Developer(C2H), 5 to 9 Years, Bangalore - Apply online</a></h5> 
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -466,7 +466,7 @@ Canada.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
