--- a/android-developer.html
+++ b/android-developer.html
@@ -61,11 +61,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/helbiz/e050dc14-5dfa-4622-92da-4ff270187d6f'>Helbiz Inc. - Android Developer - New York City</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/e050dc14-5dfa-4622-92da-4ff270187d6f'>Helbiz Inc. - Android Developer - New York City</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/3pillarglobal/bd573521-0f1b-403c-9e47-fd1855c5b647'>3Pillar Global - Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3pillarglobal/bd573521-0f1b-403c-9e47-fd1855c5b647'>3Pillar Global - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oTFg8fwG'>The Havas Group Careers - Senior Android Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/thehavasgroup/job/oTFg8fwG'>The Havas Group Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -121,7 +121,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opera.breezy.hr/p/c1207cb347f0-android-developer/apply'>Android Developer</a></h5> 
+<h5><a href='https://opera.breezy.hr/p/c1207cb347f0-android-developer/apply'>Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 6, 2019 ... Make an impact on the browsing experience of 322 million users worldwide. 
 Have you ever dreamed of making a real impact on the way people access the 
@@ -137,7 +137,7 @@ published: 20.05.2019). Apply now or check the other available jobs.</p>
 <p>Jul 10, 2019 ... 0708 - Stong Mid Android Developer. ????, ??????? Full-time. Our client is a 
 European software development company providing services worldwide since?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/truecaller/jobs/1784965'>Job Application for Insights -Android Developer at Truecaller</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/truecaller/jobs/1784965'>Job Application for Insights -Android Developer at Truecaller</a></h5> 
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -254,7 +254,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -322,7 +322,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opera.breezy.hr/p/c1207cb347f0-android-developer'>Android Developer at Opera</a></h5> 
+<h5><a href='https://opera.breezy.hr/p/c1207cb347f0-android-developer'>Android Developer at Opera</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -334,7 +334,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<h5><a href='http://aequilibrium.applytojob.com/apply/dgo6XEzDS0/Android-Developer'>Android Developer - Aequilibrium Software Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://aequilibrium.applytojob.com/apply/dgo6XEzDS0/Android-Developer'>Android Developer - Aequilibrium Software Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -389,7 +389,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205501-android-developer'>Central 1 Credit Union Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Central1CreditUnion/743999691205501-android-developer'>Central 1 Credit Union Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -477,7 +477,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<h5><a href='https://vivint.wd5.myworkdayjobs.com/vivintjobs/job/Boston-MA/Sr-Android-Developer_R109820-1'>Sr. Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vivint.wd5.myworkdayjobs.com/vivintjobs/job/Boston-MA/Sr-Android-Developer_R109820-1'>Sr. Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... You're a mobile software engineer with significant experience developing world-
 class Android applications. You work hard to play hard and take pride in?...</p>
